# Django_practice

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dog_site/dog_site/: asgi.py  settings.py  urls.py  wsgi.py
dog_site/dogs/: admin.py  apps.py  models.py  serializers.py  views.py
dog_site/dogs/migrations/: 0001_initial.py
