[tool.poetry]
name = "django-practice"
version = "0.1.0"
description = ""
authors = ["AleksGin <alexanderginin@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
django = "^5.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
